--- a/designs for form/style.css
+++ b/designs for form/style.css
@@ -15,6 +15,14 @@ body.dark {
     background-color: #66666e !important;
 }
 
+.heading-abs {
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    color: #aaaaaa;
+}
+
 .form-card {
     position: relative;
     padding: 70px 60px;
@@ -117,17 +125,15 @@ body.dark {
     bottom: -48px;
     right: -48px;
     z-index: 500;
-    border-color: #f2f2f2 transparent transparent transparent;
+    border-color: #f7f7f7 transparent transparent transparent;
     border-style: solid;
     border-width: 47px;
     border-radius: 50%;
     transform: rotate(-45deg);
-    box-shadow: 0px 0px 15px 0px #d1d1d1;
 }
 
 .check-in.dark {
-    border-color: #868686 transparent transparent transparent !important;
-    box-shadow: 0px 0px 15px 0px #414141 !important;   
+    border-color: #868686 transparent transparent transparent !important;  
 }
 
 .check-true::before {
