--- a/designs for buttons/style.css
+++ b/designs for buttons/style.css
@@ -1,20 +1,28 @@
 body {
     margin: 0px;
     padding: 0px;
-    display: flex;
     height: 100vh;
-    justify-content: center;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    width: 600px;
+    margin: 100px auto;
+}
+
+.container > button {
+    display: block;
+    margin: 400px auto;
+}
+
+/* --ripple button -------------------------------------------------------------------------------------------------------------------------- */
 .ripple-button {
     background-color: #a965e0;
     color: #ffffff;
     border: none;
     border-bottom: 5px solid #914dc9;
     padding: 15px 60px;
-    border-radius: 30px;
+    border-radius: 10px;
     font-size: 20px;
     overflow: hidden;
     cursor: pointer;
@@ -46,4 +54,52 @@ body {
         height: 500px;
         opacity: 0;
     }
+}
+
+
+
+
+
+/* --new-button -------------------------------------------------------------------------------------------------------------------------- */
+
+.new-button {
+    background-color: #a965e0;
+    color: #ffffff;
+    border: none;
+    border-top: 1px solid #914dc9;
+    border-right: 1px solid #914dc9;
+    border-left: 1px solid #914dc9;
+    border-bottom: 5px solid #914dc9;
+    padding: 15px 60px;
+    border-radius: 10px;
+    font-size: 20px;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    transition: background-color, transform .6s, .2s ease-in-out;
+}
+
+.new-button:hover {
+    background-color: #b97ceb;
+}
+
+.new-button::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 335%;
+    width: 37px;
+    background-color: #ffffff61;
+    transform: translate(-80px, -60px) rotate(45deg);
+    transition: transform .7s ease-in;
+}
+
+.new-button:hover::before {
+    transform: translate(210px, -60px) rotate(45deg);
+}
+
+.new-button:focus {
+    outline: none;
+    transform: translate(0px, -10px);
 }
