--- a/animation-with-css/1/style.css
+++ b/animation-with-css/1/style.css
@@ -1,3 +1,8 @@
+*, *::before, *::after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 body {
     margin: 0px;
     padding: 0px;
