--- a/designs-for-buttons/2/style.css
+++ b/designs-for-buttons/2/style.css
@@ -1,3 +1,9 @@
+*, *::before, *::after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     margin: 0px;
     padding: 0px;
